@@ -30,6 +30,8 @@
 #include "openssl/aes.h"
 #include "openssl/err.h"
 #include <openssl/rand.h>
+#include "openssl/hmac.h"
+#include "openssl/evp.h"
 
 #include <config.h>
 #include <tsys.h>
